<resources>
    <string name="app_name">Weather</string>
    <string name="rationale">获取当地天气需要定位权限</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="textViewCityDefault">当前城市</string>
    <string name="textViewDayTempDefault">10</string>
    <string name="textViewDayWeatherDefault">白天天气</string>
    <string name="textViewNightTempDefault">晚上气温</string>
    <string name="textViewNightWeatherDefault">晚上天气</string>
    <string name="textViewDayWind">白天风向</string>
    <string name="textViewNightWind">晚上风向</string>
    <string name="textViewDayPower">白天风力</string>
    <string name="textViewNightPower">晚上风力</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textViewToday">今天</string>
    <string name="textViewTomorrow">明天</string>
    <string name="textViewAfterTomorrow">后天</string>
    <string name="tempUnit">℃</string>
    <string name="dressing_default">穿衣指数</string>
    <string name="ultraviolet_default">紫外线指数</string>
    <string name="comfort_default">舒适度</string>
    <string name="coldRisk">感冒指数</string>
    <string name="carWashing_default">洗车指数</string>
    <string name="precipitation_default">降水数据</string>
    <string name="need_GPS">首次使用请开始定位</string>

</resources>